@@ -1,1 +1,1 @@
-#define TAGSISTANT_BUILDNUMBER "497.20140506.000047"
+#define TAGSISTANT_BUILDNUMBER "498.20140507.000033"
